Fix entry points

--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - pandas
   - openpyxl
   - xlrd
+  - cython
   - pip:
     - https://github.nrel.gov/PCM/h5plexos/archive/master.zip
     - https://github.nrel.gov/ResourceAdequacySuite/PLEXOS2PRAS/archive/master.zip
