--- a/environment.yml
+++ b/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - openpyxl
   - xlrd
   - cython
+  - julia
   - pip:
     - https://github.nrel.gov/PCM/h5plexos/archive/master.zip
     - https://github.nrel.gov/ResourceAdequacySuite/PLEXOS2PRAS/archive/master.zip
