--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,10 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 PRASBase = "b5ddb534-8618-11e9-23a2-3523bd004218"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
+
+[extras]
+H5PLEXOS = "30e9bc9d-95c1-474a-9a40-60ab4bafb5d2"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["H5PLEXOS", "Test"]
