--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,7 @@ version = "0.4.0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
-PRASBase = "b5ddb534-8618-11e9-23a2-3523bd004218"
+PRAS = "05348d26-1c52-11e9-35e3-9d51842d34b9"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
