--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 PRAS = "05348d26-1c52-11e9-35e3-9d51842d34b9"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
+ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
 
 [compat]
 PRAS = "0.5"
